2002-01-19  Per Bothner  <per@bothner.com>

	* kawa.texi:  Move some nodes into new Input-Output chapter.
	Document --output-format switch; new Named output formats node.

2001-11-27  Per Bothner  <per@bothner.com>

	* kawa.texi:  Note environment problem and fix from Jim White
	when running Ant under MS-Windows.

	* kawa.texi:  Mentioned new kawa-VERSION-src.zip.

2001-11-26  Per Bothner  <per@bothner.com>

	* kawa.texi (Binary distribution):  Remove note about windows console.

	* kawa.texi:  Merge in Ant instructions from Jim White.

	* kawa.texi (Standard Types):  Update note on <String>.

2001-11-24  Per Bothner  <per@bothner.com>

	* kawa.texi:  Document using Ant.  Remove makekawa.bat documentation.

2001-11-12  Per Bothner  <per@bothner.com>

	* kawa.texi:  Document let-values, let*-values, and current-error-port.

2001-10-12  Per Bothner  <per@bothner.com>

	* kawa.texi (Getting Kawa):  Mention mirrors, and other changes.

2001-10-11  Per Bothner  <per@bothner.com>

	* kawa.texi:  Use @email where appropriate.
	Update URL for Kawa commercial Java IDE.
	Document --servlet flag.
	(XML tools):  Add example for make-element, and building servlets.

2001-09-21  Per Bothner  <per@bothner.com>

	* kawa.texi (Options):  Document new --help option.

2001-09-13  Per Bothner  <per@bothner.com>

	* kawa.texi (set-input-port-line-number!):  Fix typo.

2001-08-24  Per Bothner  <per@bothner.com>

	* kawa.texi (Defining new classes):  New node.
	(Anonymous classes):  Update.

2001-08-17  Per Bothner  <per@bothner.com>

	* kawa.texi (XML tools):  New chapter.

2001-07-18  Per Bothner  <per@bothner.com>

	* kawa.texi (Compiling to executable):  Simplify, use gckawa script.

2001-06-18  Daniel Bonniot <d.bonniot@@mail.dotcom.fr>

	* kawa.texi (Projects):  "Bossa" renamed to "Nice"; update.

2001-06-17  Per Bothner  <per@bothner.com>

	* kawa.texi (Top):  Update URLs for Javadoc APIs.
	Note gnu.lists and gnu.xml.

	* kawa.texi (Getting Kawa):  Remove more ifhtml conditionals.