@@ -1,3 +1,7 @@
+2002-01-29  Per Bothner  <per@bothner.com>
+
+	* Makefile.am ($(KAWA_HTMLS)):  Use makeinfo --html, not texi2html.
+
 2002-01-19  Per Bothner  <per@bothner.com>
 
 	* kawa.texi:  Move some nodes into new Input-Output chapter.
